# urban

./: .gitmodules  AGENTS.md  Cargo.toml  TODO.md
clients/binance/: Cargo.toml
clients/binance/src/: config.rs  lib.rs  perps.rs  types.rs  utils.rs
clients/telegrambot/: Cargo.toml
clients/telegrambot/src/: lib.rs
clients/uniswapv3/: Cargo.toml
clients/uniswapv3/src/: config.rs  contracts.rs  lib.rs  position_manager.rs
contracts/: remappings.txt
contracts/src/: PancakeSwapPositionHelper.sol  PancakeSwapPositionReader.sol
examples/close-sell/: Cargo.toml
examples/close-sell/src/: main.rs
examples/funding-rate-calculator/: Cargo.toml
examples/funding-rate-calculator/src/: main.rs
examples/lph/: Cargo.toml
examples/lph/src/: main.rs
examples/open-sell/: Cargo.toml
examples/open-sell/src/: main.rs
examples/uniswapv3-positions/: Cargo.toml
examples/uniswapv3-positions/src/: main.rs
specs/: 0000-specs-guide.md  0001-spot-account.md  0002-future-account.md  0100-lp-hedging.md  0101-lph-monitor.md  0102-contrac-interface.md  0102-contract-interface.md  0102-helper-contract.md  0102-read-contract.md  0103-uniswapv3-client.md  0104-binance-client.md  0105-lph-strategy.md
strategy/lph/: Cargo.toml  lph_monitor.rs
strategy/lph/src/: config.rs  lib.rs  lph.rs  monitor.rs  types.rs
utils/: Cargo.toml
utils/src/: lib.rs
