[workspace]
members = [
    "clients/binance",
    "clients/uniswapv3",
    "examples/funding-rate-calculator",
    "examples/uniswapv3-positions",
    "strategy/lph",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
alloy = { version = "1.6", features = ["contract", "eips", "network", "reqwest"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2"
