[package]
name = "clients-binance"
version.workspace = true
edition.workspace = true

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
hex = "0.4"
hmac = "0.12"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
url = { workspace = true }
