[package]
name = "clients-binance"
version.workspace = true
edition.workspace = true

[lib]
name = "clients_binance"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
tracing = "0.1"
hex = "0.4"
hmac = "0.12"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
url = { workspace = true }
