[package]
name = "uniswapv3-positions"
version.workspace = true
edition.workspace = true

[[bin]]
name = "uniswapv3-positions"
path = "src/main.rs"

[dependencies]
uniswapv3 = { path = "../../clients/uniswapv3", package = "clients-uniswapv3" }
alloy.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
