[package]
name = "uniswapv3-positions"
version.workspace = true
edition.workspace = true

[[bin]]
name = "uniswapv3-positions"
path = "src/main.rs"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
clients-binance.workspace = true
clients-uniswapv3.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
utils.workspace = true
