[package]
name = "strategy-lph"
version.workspace = true
edition.workspace = true

[lib]
name = "lph"
path = "src/lib.rs"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
binance = { path = "../../clients/binance", package = "clients-binance" }
serde = { workspace = true }
uniswapv3 = { path = "../../clients/uniswapv3", package = "clients-uniswapv3" }
